# content-request

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  credentials.json  docker-entrypoint.sh  fetch_responses.py  generate_blog.py  main.py  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  seo_data.json  test_auth.py
.github/workflows/: pylint.yml
cli/: announcement.py  blog.py  docs.py  handover.py  newsletter.py  release_notes.py
content/: seo_data.json
content/announcement/: generate_announcement.py
content/blog/: generate_blog.py  seo_data.json  seo_sniper.py
content/blog/seo/: top_non_sponsored.py  top_non_sponsored_seo_analysis.py
content/docs/: generate_docs.py
content/newsletter/: generate_newsletter.py
content/release_notes/: generate_release_notes.py
content/se_handover/: generate_se_handover.py
core/: fetch_responses.py  seo_sniper.py
core/seo/: top_non_sponsored.py
output/: announcement.md  blog.md  se_handover.md
prompts/: announcement.prompt  blog.prompt  docs.prompt  newsletter.prompt  release_notes.prompt  se_handover.prompt
templates/: announcement.prompt  release_notes.prompt
